// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadDisplay loads with QR code 1`] = `
<div
  className="qr-container"
>
  <canvas
    height={128}
    style={
      Object {
        "height": 128,
        "width": 128,
      }
    }
    width={128}
  />
  <ul
    className="custom"
  />
</div>
`;

exports[`UploadDisplay loads with connected text 1`] = `
<div
  className="qr-container"
>
  <div
    className="qr-connection"
  >
    <img
      alt="success"
      src="link.png"
    />
    <p>
      Connected
    </p>
  </div>
  <ul
    className="custom"
  />
</div>
`;

exports[`UploadDisplay loads with error 1`] = `
<div
  className="qr-container"
>
  <div
    className="qr-connection"
  >
    <img
      alt="error"
      src="error.png"
    />
    <p>
      Disconnected
    </p>
  </div>
</div>
`;

exports[`UploadDisplay loads without QR code 1`] = `
<div
  className="qr-container"
>
  <ul
    className="custom"
  />
</div>
`;
